src/style/global.css
@font-face {
  font-family: 'Cooper';
  src: url('/fonts/Cooper-Black.woff2') format('woff2');
  font-weight: 900;
  font-style: normal;
}

@font-face {
  font-family: 'Cooper';
  src: url('/fonts/Cooper-BlackItalic.woff2') format('woff2');
  font-weight: 900;
  font-style: italic;
}


@font-face {
  font-family: 'Cooper';
  src: url('/fonts/Cooper-ExtraBold.woff2') format('woff2');
  font-weight: 800; /* Extra Bold weight */
  font-style: normal;
}

@font-face {
  font-family: 'Cooper';
  src: url('/fonts/Cooper-ExtraBoldItalic.woff2') format('woff2');
  font-weight: 800; /* Extra Bold weight */
  font-style: italic;
}

@font-face {
  font-family: 'Cooper';
  src: url('/fonts/Cooper-Bold.woff2') format('woff2');
  font-weight: 700;
  font-style: normal;
}

@font-face {
  font-family: 'Cooper';
  src: url('/fonts/Cooper-BoldItalic.woff2') format('woff2');
  font-weight: 700;
  font-style: italic;
}

@font-face {
  font-family: 'Vollkorn';
  src: url('/fonts/Vollkorn-Regular.woff2') format('woff2');
  font-style: normal;
}

@font-face {
  font-family: 'Vollkorn';
  src: url('/fonts/Vollkorn-Italic.woff2') format('woff2');
  font-style: italic;
}

@font-face {
  font-family: 'Vollkorn';
  src: url('/fonts/Vollkorn-Medium.woff2') format('woff2');
  font-weight: 500; /* Medium weight */
  font-style: normal;
}

@font-face {
  font-family: 'Vollkorn';
  src: url('/fonts/Vollkorn-MediumItalic.woff2') format('woff2');
  font-weight: 500; /* Medium weight */
  font-style: italic;
}

@font-face {
  font-family: 'Vollkorn';
  src: url('/fonts/Vollkorn-SemiBold.woff2') format('woff2');
  font-weight: 600; /* Semi-bold weight */
  font-style: normal;
}

@font-face {
  font-family: 'Vollkorn';
  src: url('/fonts/Vollkorn-SemiBoldItalic.woff2') format('woff2');
  font-weight: 600; /* Semi-bold weight */
  font-style: italic;
}


@font-face {
  font-family: 'Vollkorn';
  src: url('/fonts/Vollkorn-Bold.woff2') format('woff2');
  font-weight: 700;
  font-style: normal;
}

@font-face {
  font-family: 'Vollkorn';
  src: url('/fonts/Vollkorn-BoldItalic.woff2') format('woff2');
  font-weight: 700;
  font-style: italic;
}

@font-face {
  font-family: 'Vollkorn';
  src: url('/fonts/Vollkorn-ExtraBold.woff2') format('woff2');
  font-weight: 800;
  font-style: normal;
}

@font-face {
  font-family: 'Vollkorn';
  src: url('/fonts/Vollkorn-ExtraBoldItalic.woff2') format('woff2');
  font-weight: 800;
  font-style: italic;
}

@font-face {
  font-family: 'Vollkorn';
  src: url('/fonts/Vollkorn-Black.woff2') format('woff2');
  font-weight: 900; /* Black weight */
  font-style: normal;
}

@font-face {
  font-family: 'Vollkorn';
  src: url('/fonts/Vollkorn-BlackItalic.woff2') format('woff2');
  font-weight: 900;
  font-style: italic;
}


html,
body {
  min-height: 100%;
}

pre.astro-code {
  @apply py-3 -mx-4 rounded-xl /* !bg-[#fbfbf9] */ border-amber-800/10 border-2 sm:-mx-9 !mb-3 sm:text-base text-sm;
}
.leadin {
  /* @apply font-smallcaps */
}

.font-smallcaps {
  letter-spacing: 0.025em;
  font-feature-settings: "smcp";
}
.font-serif {
  font-feature-settings: "lnum", "pnum";
}

pre.astro-code>code {
  @apply grid;
}

pre>code>.line {
  @apply px-3;
}

pre>.code-title {
  @apply block bg-amber-800/15 text-amber-950  px-2 font-serif font-bold;
}

pre:has(.code-title) {
  @apply !pt-0;
}

code.astro-code {
  @apply text-sm px-1 rounded-md py-[2px] !bg-[#f2f1e9];
}

.highlighted {
  @apply bg-amber-700/5 py-1 border-l-amber-700 border-l-4;
}

.add {
  @apply bg-green-400/30 before:content-['+_'];
}

.remove {
  @apply bg-red-400/30 before:content-['-_'];
}

.prose abbr {
  @apply underline-offset-2;
}

.highlighted-word {
  @apply bg-orange-100 [&>span]:!text-orange-900 !text-orange-900 border-b-2 border-b-orange-600 font-semibold px-1 py-px rounded-md;
}

.prose p {
  @apply relative font-serif sm:text-lg text-base leading-relaxed text-stone-900;
}

figure>img {
  box-shadow: rgba(0, 0, 0, 0.2) 0px 1px 2px, rgba(0, 0, 0, 0.2) 0px 8px 16px;
}

.prose h1 {
  @apply text-2xl font-display font-bold;
}

.prose h2 {
  @apply font-bold text-2xl font-display;
}

.prose h3 {
  @apply font-bold text-xl font-smallcaps;
}
.quote {
  @apply font-extrabold font-display !bg-transparent border-none text-center text-3xl
}
.quote::before {
  content: "“";
  margin-right: 0.3rem;
  font-weight: 700;
  font-size: 2.5rem;
}
.quote::after {
  font-size: 2.5rem;
  font-weight: 700;
  content: "”"
}

.prose>p:first-of-type:first-letter {
  @apply font-serif sm:leading-[0.7] sm:text-7xl text-6xl  float-left font-semibold -mb-3 leading-[0.7] pt-[13px] mr-1;
}


@-moz-document url-prefix() {
  .prose>p:first-of-type:first-letter {
    @apply py-2;
  }
}


.prose blockquote {
  @apply border-l-amber-800 border-l-4 px-2 py-3 bg-amber-400/10;
}

.prose a {
  @apply text-amber-900 underline-offset-2 underline decoration-2 decoration-amber-800/60 hover:decoration-transparent box-decoration-clone transition-all print:no-underline print:font-bold print:text-black font-medium hover:bg-amber-800/10 rounded-md px-px -mx-px;
}

.prose summary {
  @apply cursor-pointer mb-1;
}

pre[line-numbers] {
  counter-reset: numbers;
  .line::before  {
    counter-increment: numbers;
    content: counter(numbers);
    text-align: right;
  }
}

.line:last-child::before {
  @apply !content-none 
}

pre[line-numbers]  .line::before  {
  @apply text-stone-800/50 pe-3
}


.prose blockquote:has(details) {
  @apply pb-2;
}


.prose ul {
  @apply space-y-3 sm:text-lg;
}

.prose ol {
  @apply list-inside list-decimal space-y-3 sm:text-lg;
}
.prose ol>li::marker {
  @apply  font-mono
}

.prose ul>li {
  @apply mt-3 relative pl-7 before:absolute before:left-1 before:top-3 before:h-1.5 before:w-1.5 before:rounded-full before:bg-stone-900/20;
}

.prose kbd {
  @apply rounded-lg bg-inherit border-amber-900/40 border-b-4 border-t-2 text-sm py-px px-1 relative bottom-px hover:border-b-2 hover:top-0 -top-[2px] cursor-default transition-all border-x-2;
}

.prose table {
  @apply w-full table-auto border-hidden rounded-lg border-collapse text-lg;
}

.prose thead {
  @apply font-smallcaps rounded-t-lg;
}

.prose tbody>tr>td {
  @apply p-2;
}

.prose table td {
  @apply border-[1px] border-stone-300 text-center;
}

.prose tr:first-of-type td {
  @apply border-t-0;
}

.p-category {
  @apply hidden;
}

/* Credit to Juha-Matti Santala (hamatti.org)*/
@media print {
  a::after {
    content: " (" attr(href) ") ";
  }

  a[href^="/"]::after {
    content: " (https://yusuf.fyi" attr(href) ") ";
  }
}

